entity inference